fix scrollbar

--- a/css/hux-blog.css
+++ b/css/hux-blog.css
@@ -173,8 +173,8 @@ a img:focus {
   cursor: zoom-in;
 }
 article {
-  overflow-x: hidden;
-}
+    overflow: hidden;
+} 
 blockquote {
   color: #808080;
   font-style: italic;
